bug fixses with cuted img and line-heights

--- a/styles/components/contact/_contact.scss
+++ b/styles/components/contact/_contact.scss
@@ -109,6 +109,9 @@
                 &--social {
                     padding-left: 0;
                 }
+                &--heading {
+                    line-height: 4rem;
+                }
             }
             &__form-container {
                 width: 100%;
