--- a/styles/components/information/_information.scss
+++ b/styles/components/information/_information.scss
@@ -14,7 +14,8 @@
                 min-height: 530px;
                 position: relative;
                 display: block;
-                background-position: center;
+                background-position-x: center;
+                background-position-y: top;
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-image: url('../../../assets/galery/personal.jpg');
