--- a/styles/components/navigation/_navigation.scss
+++ b/styles/components/navigation/_navigation.scss
@@ -87,6 +87,22 @@
                             text-transform: uppercase;
                             font-size: 2rem;
                             font-weight: $font-regular;
+                            position: relative;
+                            overflow: hidden;
+                            display: block;
+                            &::before {
+                                width: 100%;
+                                height: 2px;
+                                background-color: $color-white;
+                                content: '';
+                                left: -105%;
+                                position: absolute;
+                                transition: .2s;
+                                bottom: 0;
+                            }
+                            &:hover::before{
+                                left: 0;
+                            }
                         }
                     }
                     .mobile-nav {
