--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,25 @@ body, html {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 400;
+  position: relative;
+  overflow: hidden;
+  display: block;
+}
+
+.navigation-component .navigation-content-container__logo-list-holder--list .list--item a::before {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  content: '';
+  left: -105%;
+  position: absolute;
+  -webkit-transition: .2s;
+  transition: .2s;
+  bottom: 0;
+}
+
+.navigation-component .navigation-content-container__logo-list-holder--list .list--item a:hover::before {
+  left: 0;
 }
 
 .navigation-component .navigation-content-container__logo-list-holder--list .list .mobile-nav {
