--- a/styles/components/information/_information.scss
+++ b/styles/components/information/_information.scss
@@ -43,7 +43,7 @@
                 margin-bottom: 20px;
                 &::before {
                     left: 0;
-                    top: -40px;
+                    top: -4rem;
                     content: 'WITAJCIE';
                     font-family: $font-Blinker;
                     font-size: $font-h3-desktop;
