--- a/styles/style.css
+++ b/styles/style.css
@@ -746,7 +746,7 @@ body, html {
 
 .information-component .information-content-container__content-container--heading::before {
   left: 0;
-  top: -40px;
+  top: -4rem;
   content: 'WITAJCIE';
   font-family: "Blinker", sans-serif;
   font-size: 3.2rem;
