--- a/styles/components/information/_information.scss
+++ b/styles/components/information/_information.scss
@@ -41,18 +41,8 @@
                 position: relative;
                 transform: translateX(-100px);
                 margin-bottom: 20px;
-                &::before {
-                    left: 0;
-                    top: -4rem;
-                    content: 'WITAJCIE';
-                    font-family: $font-Blinker;
-                    font-size: $font-h3-desktop;
-                    font-weight: $font-extra-light;
-                    position: absolute;
-                }
             }
             &--text {
-                max-width: 375px;
                 display: block;
                 margin-bottom: 20px;
                 &:last-child {
@@ -73,11 +63,8 @@
             align-items: flex-end;
             flex-direction: column;
             color: $color-white;
-            &--heading {
-                width: 460px;
-            }
+            padding: 40px 0;
             &--text {
-                width: 460px;
                 margin-top: 20px;
             }
         }
@@ -85,13 +72,26 @@
             width: 50%;
             padding-left: 20px;
             &--image {
-                width: 375px;
+                width: 100%;
                 height: 100%;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-image: url('../../../assets/galery/personal-2.jpg')
             }
+        }
+    }
+    .information-additional-content-container-reverse {
+        display: flex;
+        flex-direction: row-reverse;
+        .information-additional-content-container__image-container {
+            padding-left: 0;
+            &--image {
+                background-image: url('../../../assets/galery/item-4.jpg');
+            }
+        }
+        .information-additional-content-container__content-container {
+            padding-left: 20px;   
         }
     }
 }
@@ -121,9 +121,6 @@
                 &--heading {
                     transform: translateX(0px);
                     margin-bottom: 10px;
-                    &::before {
-                        top: -30px;
-                    }
                 }
                 &--text {
                     max-width: 100%;
@@ -140,10 +137,8 @@
             flex-direction: column;
             &__content-container {
                 width: 100%;
+                padding: 0 0 20px 0;
                 align-items: flex-start;
-                &--heading {
-                    width: 100%;
-                }
                 &--text  {
                     width: 100%;
                 }
