--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -744,18 +743,7 @@ body, html {
   margin-bottom: 20px;
 }
 
-.information-component .information-content-container__content-container--heading::before {
-  left: 0;
-  top: -4rem;
-  content: 'WITAJCIE';
-  font-family: "Blinker", sans-serif;
-  font-size: 3.2rem;
-  font-weight: 200;
-  position: absolute;
-}
-
 .information-component .information-content-container__content-container--text {
-  max-width: 375px;
   display: block;
   margin-bottom: 20px;
 }
@@ -788,14 +776,10 @@ body, html {
       -ms-flex-direction: column;
           flex-direction: column;
   color: #fff;
-}
-
-.information-component .information-additional-content-container__content-container--heading {
-  width: 460px;
+  padding: 40px 0;
 }
 
 .information-component .information-additional-content-container__content-container--text {
-  width: 460px;
   margin-top: 20px;
 }
 
@@ -805,12 +789,34 @@ body, html {
 }
 
 .information-component .information-additional-content-container__image-container--image {
-  width: 375px;
+  width: 100%;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url("../../../assets/galery/personal-2.jpg");
+}
+
+.information-component .information-additional-content-container-reverse {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+.information-component .information-additional-content-container-reverse .information-additional-content-container__image-container {
+  padding-left: 0;
+}
+
+.information-component .information-additional-content-container-reverse .information-additional-content-container__image-container--image {
+  background-image: url("../../../assets/galery/item-4.jpg");
+}
+
+.information-component .information-additional-content-container-reverse .information-additional-content-container__content-container {
+  padding-left: 20px;
 }
 
 @media (max-width: 1024px) {
@@ -849,9 +855,6 @@ body, html {
             transform: translateX(0px);
     margin-bottom: 10px;
   }
-  .information-component .information-content-container__content-container--heading::before {
-    top: -30px;
-  }
   .information-component .information-content-container__content-container--text {
     max-width: 100%;
   }
@@ -869,12 +872,10 @@ body, html {
   }
   .information-component .information-additional-content-container__content-container {
     width: 100%;
+    padding: 0 0 20px 0;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-  }
-  .information-component .information-additional-content-container__content-container--heading {
-    width: 100%;
   }
   .information-component .information-additional-content-container__content-container--text {
     width: 100%;
@@ -1052,7 +1053,7 @@ body, html {
 }
 
 .music-component .music-content-container__playlist-container .holder {
-  width: 500px;
+  width: 100%;
   height: 100%;
   background-color: #383838;
   padding: 16px;
@@ -1065,7 +1066,7 @@ body, html {
 
 .music-component .music-content-container__content-container {
   width: 50%;
-  padding: 80px 0 80px 20px;
+  padding: 20px 0 80px 20px;
 }
 
 .music-component .music-content-container__content-container--heading {
@@ -1076,25 +1077,12 @@ body, html {
   position: relative;
 }
 
-.music-component .music-content-container__content-container--heading::before {
-  left: 0;
-  top: -40px;
-  content: 'WSŁUCHAJ SIĘ';
-  font-family: "Blinker", sans-serif;
-  font-size: 3.2rem;
-  font-weight: 200;
-  position: absolute;
-}
-
-@media (max-width: 1024px) {
-  .music-component .music-content-container__content-container--heading::before {
-    font-size: 2.4rem;
-  }
-}
-
 .music-component .music-content-container__content-container--text {
   margin: 20px 0 40px 0;
-  max-width: 375px;
+}
+
+.music-component .music-content-container__content-container--text:nth-child(1) {
+  margin: 20px 0 20px 0;
 }
 
 @media (max-width: 982px) {
