--- a/styles/components/information/_information.scss
+++ b/styles/components/information/_information.scss
@@ -153,5 +153,10 @@
                 }
             }
         }
+        .information-additional-content-container-reverse {
+            .information-additional-content-container__content-container {
+                padding-left: 0px;   
+            }
+        }
     }
 }
