--- a/styles/components/contact/_contact.scss
+++ b/styles/components/contact/_contact.scss
@@ -83,10 +83,11 @@
                     margin-bottom: 25px;
                     line-height: 3rem;
                 }
-                textarea {
+                .textarea {
                     max-width: 100%;
                     min-width: 100%;
                     height: 240px;
+                    align-items: flex-start;
                 }
                 button {
                     border: none;
