configure email send

--- a/styles/components/contact/_contact.scss
+++ b/styles/components/contact/_contact.scss
@@ -91,6 +91,7 @@
                 }
                 button {
                     border: none;
+                    cursor: pointer;
                 }
             }
         }
