--- a/styles/components/footer/_footer.scss
+++ b/styles/components/footer/_footer.scss
@@ -15,6 +15,10 @@
             &--logo {
                 font-size: 5rem;
                 color: $color-white;
+                img {
+                    width: 240px;
+                }
+                
             }
         }
         &__copyright-container {
