--- a/styles/components/navigation/_navigation.scss
+++ b/styles/components/navigation/_navigation.scss
@@ -17,6 +17,9 @@
                 a {
                     font-size: 5rem;
                     color: $color-white;
+                    img {
+                        width: 150px;
+                    }
                 }
             }
             &--list {
