--- a/styles/components/dashboard/_dashboard.scss
+++ b/styles/components/dashboard/_dashboard.scss
@@ -17,9 +17,6 @@
         &__heading {
             margin-bottom: 30px;
             z-index: 1;
-            h1 {
-                line-height: 90px;
-            }
         }
         &__subheading {
             z-index: 1;
@@ -108,11 +105,11 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-image: url('../../../assets/home/photo-1533146303127-f2ef440cfeb5.jpg');
+        background-image: url('../../../assets/home/home-1.jpg');
         &::before {
             width: 100%;
             height: 100%;
-            background-color: rgba($color: $color-black, $alpha: .8);
+            background-color: rgba($color: $color-black, $alpha: .3);
             content: '';
             left: 0;
             top: 0;
@@ -134,10 +131,12 @@
 @include break-point-down(xm) {
     .dashboard-component {
         .dashboard-content-container {
+            align-items: center;
             padding-left: 0px;
             &__heading {
                 h1 {
                     line-height: 50px;
+                    text-align: center;
                 }
             }
             &__buttons {
