--- a/styles/style.css
+++ b/styles/style.css
@@ -1196,6 +1196,30 @@ body, html {
   background-image: url("../../../assets/galery/item-8.jpg");
 }
 
+.instagram-compontent .instagram-content-container__image-container--item3 {
+  width: 25%;
+  height: 300px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.instagram-compontent .instagram-content-container__image-container--item3:nth-child(1) {
+  background-image: url("../../../assets/galery/item-9.jpg");
+}
+
+.instagram-compontent .instagram-content-container__image-container--item3:nth-child(2) {
+  background-image: url("../../../assets/galery/item-10.jpg");
+}
+
+.instagram-compontent .instagram-content-container__image-container--item3:nth-child(3) {
+  background-image: url("../../../assets/galery/item-11.jpg");
+}
+
+.instagram-compontent .instagram-content-container__image-container--item3:nth-child(4) {
+  background-image: url("../../../assets/galery/item-12.jpg");
+}
+
 .instagram-compontent .instagram-content-container__link-container {
   padding: 0px 0 0px 40px;
   width: 562px;
