--- a/styles/components/instagram/_instagram.scss
+++ b/styles/components/instagram/_instagram.scss
@@ -98,7 +98,8 @@
                     flex-direction: column;
                 }
                 &--item,
-                &--item2 {
+                &--item2,
+                &--item3 {
                     width: 100%;
                     height: 400px;
                 }
